main/.antlr/MiniGoParser.py
# Generated from d:/WORKSPACE/PPL/code/main/MiniGo.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'if'", "'else'", "'for'", "'return'", 
                     "'func'", "'type'", "'struct'", "'interface'", "'string'", 
                     "'int'", "'float'", "'boolean'", "'const'", "'var'", 
                     "'continue'", "'break'", "'range'", "'nil'", "'true'", 
                     "'false'", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
                     "'||'", "'&&'", "'!'", "':='", "'+='", "'-='", "'*='", 
                     "'/='", "'%='", "'='", "'.'", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "IF", "ELSE", "FOR", "RETURN", 
                      "FUNC", "TYPE", "STRUCT", "INTERFACE", "STRING", "INT", 
                      "FLOAT", "BOOLEAN", "CONST", "VAR", "CONTINUE", "BREAK", 
                      "RANGE", "NIL", "TRUE", "FALSE", "NEWLINE", "ADD", 
                      "SUB", "MUL", "DIV", "MOD", "EQUAL", "NOT_EQUAL", 
                      "LT", "LE", "GT", "GE", "LOGICAL_OR", "LOGICAL_AND", 
                      "LOGICAL_NOT", "SHORT_DECL", "ADD_ASSIGN", "SUB_ASSIGN", 
                      "MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "ASSIGN", 
                      "DOT", "OP", "CP", "OSB", "CSB", "OCB", "CCB", "COMMA", 
                      "SEMICOLON", "ID", "INT_LIT", "FLOAT_LIT", "WS", "COMMENT", 
                      "LINE_COMMENT", "STRING_LIT", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_semicolon_newline = 1
    RULE_declared_statement = 2
    RULE_const_decl = 3
    RULE_var_decl = 4
    RULE_primitive_type = 5
    RULE_boolean_literal = 6
    RULE_primitive_literal = 7
    RULE_literal = 8
    RULE_array_bracket = 9
    RULE_type_return = 10
    RULE_array_literal = 11
    RULE_array_lit_elements = 12
    RULE_array_lit_element = 13
    RULE_array_lit_element_1 = 14
    RULE_struct_literal = 15
    RULE_struct_element = 16
    RULE_interface_decl = 17
    RULE_method_interface_decl = 18
    RULE_method_field = 19
    RULE_method_params = 20
    RULE_struct_decl = 21
    RULE_struct_decl_element = 22
    RULE_struct_decl_elements = 23
    RULE_list_expression = 24
    RULE_expression = 25
    RULE_expression1 = 26
    RULE_expression2 = 27
    RULE_expression3 = 28
    RULE_expression4 = 29
    RULE_expression5 = 30
    RULE_expression6 = 31
    RULE_expression7_1 = 32
    RULE_expression7_2 = 33
    RULE_func_call = 34
    RULE_params = 35
    RULE_param_type = 36
    RULE_param_type_1 = 37
    RULE_func_decl = 38
    RULE_method_decl = 39
    RULE_list_statement = 40
    RULE_statement = 41
    RULE_full_statement = 42
    RULE_statements_in_block = 43
    RULE_lhs = 44
    RULE_op_assign = 45
    RULE_assign_statement = 46
    RULE_else_if_el = 47
    RULE_else_if_statement = 48
    RULE_else_statement = 49
    RULE_if_statement = 50
    RULE_for_statement = 51
    RULE_basic_for_statement = 52
    RULE_update_part = 53
    RULE_init_part = 54
    RULE_init_for_statement = 55
    RULE_range_for_statement = 56
    RULE_break_statement = 57
    RULE_continue_statement = 58
    RULE_call_statement = 59
    RULE_call_statement_1 = 60
    RULE_return_statement = 61

    ruleNames =  [ "program", "semicolon_newline", "declared_statement", 
                   "const_decl", "var_decl", "primitive_type", "boolean_literal", 
                   "primitive_literal", "literal", "array_bracket", "type_return", 
                   "array_literal", "array_lit_elements", "array_lit_element", 
                   "array_lit_element_1", "struct_literal", "struct_element", 
                   "interface_decl", "method_interface_decl", "method_field", 
                   "method_params", "struct_decl", "struct_decl_element", 
                   "struct_decl_elements", "list_expression", "expression", 
                   "expression1", "expression2", "expression3", "expression4", 
                   "expression5", "expression6", "expression7_1", "expression7_2", 
                   "func_call", "params", "param_type", "param_type_1", 
                   "func_decl", "method_decl", "list_statement", "statement", 
                   "full_statement", "statements_in_block", "lhs", "op_assign", 
                   "assign_statement", "else_if_el", "else_if_statement", 
                   "else_statement", "if_statement", "for_statement", "basic_for_statement", 
                   "update_part", "init_part", "init_for_statement", "range_for_statement", 
                   "break_statement", "continue_statement", "call_statement", 
                   "call_statement_1", "return_statement" ]

    EOF = Token.EOF
    T__0=1
    IF=2
    ELSE=3
    FOR=4
    RETURN=5
    FUNC=6
    TYPE=7
    STRUCT=8
    INTERFACE=9
    STRING=10
    INT=11
    FLOAT=12
    BOOLEAN=13
    CONST=14
    VAR=15
    CONTINUE=16
    BREAK=17
    RANGE=18
    NIL=19
    TRUE=20
    FALSE=21
    NEWLINE=22
    ADD=23
    SUB=24
    MUL=25
    DIV=26
    MOD=27
    EQUAL=28
    NOT_EQUAL=29
    LT=30
    LE=31
    GT=32
    GE=33
    LOGICAL_OR=34
    LOGICAL_AND=35
    LOGICAL_NOT=36
    SHORT_DECL=37
    ADD_ASSIGN=38
    SUB_ASSIGN=39
    MUL_ASSIGN=40
    DIV_ASSIGN=41
    MOD_ASSIGN=42
    ASSIGN=43
    DOT=44
    OP=45
    CP=46
    OSB=47
    CSB=48
    OCB=49
    CCB=50
    COMMA=51
    SEMICOLON=52
    ID=53
    INT_LIT=54
    FLOAT_LIT=55
    WS=56
    COMMENT=57
    LINE_COMMENT=58
    STRING_LIT=59
    ERROR_CHAR=60
    UNCLOSE_STRING=61
    ILLEGAL_ESCAPE=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_statement(self):
            return self.getTypedRuleContext(MiniGoParser.List_statementContext,0)


        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_program




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.list_statement()
            self.state = 125
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Semicolon_newlineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(MiniGoParser.SEMICOLON, 0)

        def NEWLINE(self):
            return self.getToken(MiniGoParser.NEWLINE, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_semicolon_newline




    def semicolon_newline(self):

        localctx = MiniGoParser.Semicolon_newlineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_semicolon_newline)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            _la = self._input.LA(1)
            if not(_la==22 or _la==52):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declared_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Var_declContext,0)


        def const_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Const_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Func_declContext,0)


        def struct_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_declContext,0)


        def interface_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Interface_declContext,0)


        def method_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Method_declContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_declared_statement




    def declared_statement(self):

        localctx = MiniGoParser.Declared_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declared_statement)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.const_decl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 131
                self.func_decl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 132
                self.struct_decl()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 133
                self.interface_decl()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 134
                self.method_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(MiniGoParser.CONST, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniGoParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_const_decl




    def const_decl(self):

        localctx = MiniGoParser.Const_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_const_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(MiniGoParser.CONST)
            self.state = 138
            self.match(MiniGoParser.ID)
            self.state = 139
            self.match(MiniGoParser.ASSIGN)
            self.state = 140
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def param_type(self):
            return self.getTypedRuleContext(MiniGoParser.Param_typeContext,0)


        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniGoParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_var_decl




    def var_decl(self):

        localctx = MiniGoParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(MiniGoParser.VAR)
            self.state = 143
            self.match(MiniGoParser.ID)
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 144
                self.param_type(0)
                pass

            elif la_ == 2:
                self.state = 145
                self.match(MiniGoParser.ASSIGN)
                self.state = 146
                self.expression(0)
                pass

            elif la_ == 3:
                self.state = 147
                self.param_type(0)
                self.state = 148
                self.match(MiniGoParser.ASSIGN)
                self.state = 149
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primitive_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MiniGoParser.INT, 0)

        def FLOAT(self):
            return self.getToken(MiniGoParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MiniGoParser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(MiniGoParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_primitive_type




    def primitive_type(self):

        localctx = MiniGoParser.Primitive_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_primitive_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 15360) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Boolean_literalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(MiniGoParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(MiniGoParser.FALSE, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_boolean_literal




    def boolean_literal(self):

        localctx = MiniGoParser.Boolean_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_boolean_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            _la = self._input.LA(1)
            if not(_la==20 or _la==21):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primitive_literalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NIL(self):
            return self.getToken(MiniGoParser.NIL, 0)

        def INT_LIT(self):
            return self.getToken(MiniGoParser.INT_LIT, 0)

        def FLOAT_LIT(self):
            return self.getToken(MiniGoParser.FLOAT_LIT, 0)

        def boolean_literal(self):
            return self.getTypedRuleContext(MiniGoParser.Boolean_literalContext,0)


        def STRING_LIT(self):
            return self.getToken(MiniGoParser.STRING_LIT, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_primitive_literal




    def primitive_literal(self):

        localctx = MiniGoParser.Primitive_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_primitive_literal)
        try:
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.match(MiniGoParser.NIL)
                pass
            elif token in [54]:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.match(MiniGoParser.INT_LIT)
                pass
            elif token in [55]:
                self.enterOuterAlt(localctx, 3)
                self.state = 159
                self.match(MiniGoParser.FLOAT_LIT)
                pass
            elif token in [20, 21]:
                self.enterOuterAlt(localctx, 4)
                self.state = 160
                self.boolean_literal()
                pass
            elif token in [59]:
                self.enterOuterAlt(localctx, 5)
                self.state = 161
                self.match(MiniGoParser.STRING_LIT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_literal(self):
            return self.getTypedRuleContext(MiniGoParser.Primitive_literalContext,0)


        def struct_literal(self):
            return self.getTypedRuleContext(MiniGoParser.Struct_literalContext,0)


        def array_literal(self):
            return self.getTypedRuleContext(MiniGoParser.Array_literalContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_literal




    def literal(self):

        localctx = MiniGoParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_literal)
        try:
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19, 20, 21, 54, 55, 59]:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.primitive_literal()
                pass
            elif token in [53]:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.struct_literal()
                pass
            elif token in [47]:
                self.enterOuterAlt(localctx, 3)
                self.state = 166
                self.array_literal()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_bracketContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OSB(self):
            return self.getToken(MiniGoParser.OSB, 0)

        def CSB(self):
            return self.getToken(MiniGoParser.CSB, 0)

        def array_bracket(self):
            return self.getTypedRuleContext(MiniGoParser.Array_bracketContext,0)


        def INT_LIT(self):
            return self.getToken(MiniGoParser.INT_LIT, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_array_bracket




    def array_bracket(self):

        localctx = MiniGoParser.Array_bracketContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_array_bracket)
        self._la = 0 # Token type
        try:
            self.state = 176
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.match(MiniGoParser.OSB)
                self.state = 170
                _la = self._input.LA(1)
                if not(_la==53 or _la==54):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 171
                self.match(MiniGoParser.CSB)
                self.state = 172
                self.array_bracket()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 173
                self.match(MiniGoParser.OSB)
                self.state = 174
                _la = self._input.LA(1)
                if not(_la==53 or _la==54):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 175
                self.match(MiniGoParser.CSB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_returnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def primitive_type(self):
            return self.getTypedRuleContext(MiniGoParser.Primitive_typeContext,0)


        def array_bracket(self):
            return self.getTypedRuleContext(MiniGoParser.Array_bracketContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_type_return




    def type_return(self):

        localctx = MiniGoParser.Type_returnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_type_return)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==47:
                self.state = 178
                self.array_bracket()


            self.state = 183
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [53]:
                self.state = 181
                self.match(MiniGoParser.ID)
                pass
            elif token in [10, 11, 12, 13]:
                self.state = 182
                self.primitive_type()
                pass
            else:
                raise NoViableAltException(self)
